--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,16 @@
 @import "./reset";
 @import "./variables";
 
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: "Old Standard TT", serif;
 }
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+.main {
+  background-color: $dark-brown;
 }
