--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -52,3 +52,50 @@
     background-color: $yellow;
   }
 }
+.burger {
+  display: none;
+}
+
+@media (max-width: 880px) {
+  .navWrapper {
+    position: absolute;
+    left: -100%;
+    top: 0;
+    height: 100vh;
+    background-color: $dark-brown;
+    transition: left 0.3s ease-in-out;
+    flex-direction: column;
+    padding: 70px;
+    justify-content: start;
+    gap: 30px;
+  }
+  .navList {
+    flex-direction: column;
+  }
+  .navLink {
+    font-size: 14px;
+  }
+  .active {
+    left: 0;
+  }
+  .burger {
+    position: absolute;
+    right: 20px;
+
+    display: flex;
+    flex-direction: column;
+    width: 25px;
+  }
+  .span {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    background-color: $white;
+  }
+  .span:first-child {
+    top: -6px;
+  }
+  .span:last-child {
+    bottom: -6px;
+  }
+}
