--- a/src/components/Image/Image.module.scss
+++ b/src/components/Image/Image.module.scss
@@ -2,3 +2,15 @@
   background: url("./../../assets/images/bg2.png");
   height: 462px;
 }
+
+@media (max-width: 1100px) {
+  .image {
+    height: 350px;
+  }
+}
+
+@media (max-width: 880px) {
+  .image {
+    display: none;
+  }
+}
