--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -2,6 +2,7 @@
 
 .services {
   margin: 138px 0 120px;
+  padding: 0 20px;
 }
 .subtitle {
   font-size: 12px;
@@ -48,4 +49,89 @@
   line-height: 26px;
   color: $gray;
   max-width: 222px;
+}
+
+@media (max-width: 1100px) {
+  .services {
+    margin: 85px 0 95px;
+  }
+  .subtitle {
+    margin-bottom: 8px;
+  }
+  .title {
+    font-size: 45px;
+    line-height: 50px;
+    margin-bottom: 20px;
+  }
+  .item {
+    padding: 30px;
+  }
+  .itemTitle {
+    font-size: 22px;
+  }
+  .itemSubtext {
+    width: auto;
+  }
+}
+
+@media (max-width: 880px) {
+  .services {
+    margin: 0 0 80px;
+  }
+  .subtitle {
+    font-size: 10px;
+  }
+  .title {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 20px;
+  }
+  .item {
+    padding: 20px;
+
+    img {
+      width: 40px;
+      height: 40px;
+      margin-bottom: 15px;
+    }
+  }
+  .itemTitle {
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 10px;
+  }
+  .itemText {
+    line-height: 16px;
+  }
+  .itemSubtext {
+    line-height: 16px;
+    width: auto;
+  }
+}
+
+@media (max-width: 770px) {
+  .subtitle {
+    line-height: 10px;
+  }
+  .title {
+    font-size: 30px;
+    line-height: 35px;
+    margin-bottom: 20px;
+  }
+  .item {
+    max-width: 210px;
+  }
+  .itemTitle {
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .itemText {
+    font-size: 14px;
+  }
+  .list {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
 }
