--- a/src/components/Subscribe/Subscribe.module.scss
+++ b/src/components/Subscribe/Subscribe.module.scss
@@ -82,3 +82,44 @@
   width: 20px;
   height: 20px;
 }
+
+@media (max-width: 1100px) {
+  .title {
+    font-size: 45px;
+    line-height: 50px;
+    margin-bottom: 10px;
+  }
+  .text {
+    margin-bottom: 30px;
+  }
+  .input,
+  .btn {
+    width: 350px;
+  }
+}
+
+@media (max-width: 880px) {
+  .title {
+    font-size: 35px;
+    line-height: 40px;
+    max-width: 350px;
+    margin-bottom: 10px;
+  }
+  .input,
+  .btn {
+    width: 300px;
+  }
+}
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 30px;
+    line-height: 35px;
+    margin-bottom: 20px;
+  }
+  .text {
+    max-width: 350px;
+    text-align: center;
+    line-height: 18px;
+  }
+}
